--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <hr>
   <h2>My Fine Hobbies</h2>
   <img src="images/blog1.jpg" alt="Weird alien eating popcorn." title="Wow Alien.">
+  <p>For Alien Abduction Order Form <a href="forms.html">Get Alienated!!</a> </p>
   <ul>
       <li>Watching movies</li>
       <li>Playing computer games</li>
@@ -41,6 +42,7 @@
   <p>My favorite website is <a href="https://www.google.com">Google.</a></p>
   <p>My Linkedin profile is <a href="https://www.linkedin.com/in/yigitkutaygulben/" target="_blank">Linkedin.</a></p>
   <p>This is my best friend's Linkedin profile <a href="https://www.linkedin.com/in/ogulcancelik/" target="_blank">Ogulcan's Linkedin.</a></p>
+  <p>This is my sweetheart's Linkedin profile <a href="https://www.linkedin.com/in/cemreerdogan/" target="_blank">Cemre's Linkedin.</a></p>
 </body>
 </html>
 <!-- remember this is a commend -->
