--- a/interests.html
+++ b/interests.html
@@ -32,5 +32,8 @@
   <h2>My Fine Links</h2>
   <p>My favorite website is <a href="https://www.google.com">Google.</a></p>
   <p>My Linkedin profile is <a href="https://www.linkedin.com/in/yigitkutaygulben/" target="_blank">Linkedin.</a></p>
+  <p>This is my best friend's Linkedin profile <a href="https://www.linkedin.com/in/ogulcancelik/" target="_blank">Ogulcan's Linkedin.</a></p>
+  <p>This is my sweetheart's Linkedin profile <a href="https://www.linkedin.com/in/cemreerdogan/" target="_blank">Cemre's Linkedin.</a></p>
+</body>
 </body>
 </html>
