--- a/learning.html
+++ b/learning.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My first web page</title>
+    <title>This is my study area</title>
 
     <link href="css/style.css" rel="stylesheet">
     <!-- all paragraphes are blue and this overrides external stylesheets -->
@@ -15,7 +15,7 @@
     </style> -->
 </head>
 <body>
-    <h1 style="background-color: powderblue;">All About Me</h1>
+    <h1 style="background-color: powderblue;">This is my study area and I know it is a mess, so be aware!</h1>
 
     <p style="color: purple; font-weight: bold;">Hello, world! My name is Jen. I live in Boston. Minneapolis is awesome. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam nostrum, ea consequatur quae impedit sunt cupiditate amet at saepe nulla consequuntur tenetur, repellendus commodi voluptates molestiae deserunt fugit? Consequuntur odit rem magni, veritatis distinctio unde. Tempore ad expedita fugit suscipit. </p>
 <hr>
