--- a/calculator.html
+++ b/calculator.html
@@ -46,6 +46,12 @@
         </div>
     </section>
   </div>
+  <p>Visit my <a href="index.html">Homepage</a> </p>
+  <p>Visit my <a href="interests.html">Interests</a> </p>
+  <p>Visit my <a href="learning.html">Calculator</a> </p>
+  <p>Visit my <a href="forms.html">Form</a> </p>
+  <p>Visit my <a href="doggos.html">Doggos</a> </p>
+  <p>Visit my <a href="navButtons.html">Buttons</a> </p>
   <script src="js/calculator.js"></script>
 </body>
 
