--- a/forms.html
+++ b/forms.html
@@ -51,7 +51,12 @@
 					</label>
 				</fieldset>
 				<button type="submit">Submit</button>
-				<p>Go back to HomePage <a href="index.html">Homepage</a> </p>
+				<p>Visit my <a href="index.html">Homepage</a> </p>
+				<p>Visit my <a href="interests.html">Interests</a> </p>
+				<p>Visit my <a href="calculator.html">Calculator</a> </p>
+				<p>Visit my <a href="learning.html">Calculator</a> </p>
+				<p>Visit my <a href="doggos.html">Doggos</a> </p>
+				<p>Visit my <a href="navButtons.html">Buttons</a> </p>
 			</form>					
 		</section>
 		<aside>
