--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <p>Hello, world! My name is Yigit. I live in Turkey. Izmir is awesome.</p>
   <p>I love playing games on computer. I love hanging out with my friends.</p>
   <p>Visit my <a href="interests.html">Interests</a> </p>
-  <p>Visit my <a href="learning.html">Learning</a> </p>
+  <p>Visit my <a href="calculator.html">Calculator</a> </p>
+  <p>Visit my <a href="learning.html">Calculator</a> </p>
+  <p>Visit my <a href="forms.html">Form</a> </p>
+  <p>Visit my <a href="doggos.html">Doggos</a> </p>
   <p>Visit my <a href="navButtons.html">Buttons</a> </p>
   <hr>
   <h2>My Fine Hobbies</h2>
