--- a/interests.html
+++ b/interests.html
@@ -15,7 +15,10 @@
       <cite>Smart Person</cite>
   </blockquote>
   <p>Visit my <a href="index.html">Homepage</a> </p>
-  <p>Visit my <a href="learning.html">Learning</a> </p>
+  <p>Visit my <a href="calculator.html">Calculator</a> </p>
+  <p>Visit my <a href="learning.html">Calculator</a> </p>
+  <p>Visit my <a href="forms.html">Form</a> </p>
+  <p>Visit my <a href="doggos.html">Doggos</a> </p>
   <p>Visit my <a href="navButtons.html">Buttons</a> </p>
   <hr>
   <h2>Some kitten Fotos</h2>
