--- a/navButtons.html
+++ b/navButtons.html
@@ -10,7 +10,10 @@
 <body>
     <p>Visit my <a href="index.html">Homepage</a> </p>
     <p>Visit my <a href="interests.html">Interests</a> </p>
-    <p>Visit my <a href="learning.html">Learning</a> </p>
+    <p>Visit my <a href="calculator.html">Calculator</a> </p>
+    <p>Visit my <a href="learning.html">Calculator</a> </p>
+    <p>Visit my <a href="forms.html">Form</a> </p>
+    <p>Visit my <a href="doggos.html">Doggos</a> </p>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
