--- a/learning.html
+++ b/learning.html
@@ -92,6 +92,10 @@
     <hr>
     <p>Visit my <a href="index.html">Homepage</a> </p>
     <p>Visit my <a href="interests.html">Interests</a> </p>
+    <p>Visit my <a href="calculator.html">Calculator</a> </p>
+    <p>Visit my <a href="forms.html">Form</a> </p>
+    <p>Visit my <a href="doggos.html">Doggos</a> </p>
+    <p>Visit my <a href="navButtons.html">Buttons</a> </p>
     <hr>
     <style>
         .borderradius2 {
