--- a/forms.html
+++ b/forms.html
@@ -54,7 +54,7 @@
 				<p>Visit my <a href="index.html">Homepage</a> </p>
 				<p>Visit my <a href="interests.html">Interests</a> </p>
 				<p>Visit my <a href="calculator.html">Calculator</a> </p>
-				<p>Visit my <a href="learning.html">Calculator</a> </p>
+				<p>Visit my <a href="learning.html">Learning</a> </p>
 				<p>Visit my <a href="doggos.html">Doggos</a> </p>
 				<p>Visit my <a href="navButtons.html">Buttons</a> </p>
 			</form>					
