--- a/interests.html
+++ b/interests.html
@@ -16,7 +16,7 @@
   </blockquote>
   <p>Visit my <a href="index.html">Homepage</a> </p>
   <p>Visit my <a href="calculator.html">Calculator</a> </p>
-  <p>Visit my <a href="learning.html">Calculator</a> </p>
+  <p>Visit my <a href="learning.html">Learning</a> </p>
   <p>Visit my <a href="forms.html">Form</a> </p>
   <p>Visit my <a href="doggos.html">Doggos</a> </p>
   <p>Visit my <a href="navButtons.html">Buttons</a> </p>
