--- a/forms.html
+++ b/forms.html
@@ -57,6 +57,7 @@
 				<p>Visit my <a href="learning.html">Learning</a> </p>
 				<p>Visit my <a href="doggos.html">Doggos</a> </p>
 				<p>Visit my <a href="navButtons.html">Buttons</a> </p>
+				<p>Visit my <a href="my-mole-game/my-mole.html">Mole Game</a> </p>
 			</form>					
 		</section>
 		<aside>
