--- a/navButtons.html
+++ b/navButtons.html
@@ -14,6 +14,7 @@
     <p>Visit my <a href="learning.html">Learning</a> </p>
     <p>Visit my <a href="forms.html">Form</a> </p>
     <p>Visit my <a href="doggos.html">Doggos</a> </p>
+    <p>Visit my <a href="my-mole-game/my-mole.html">Mole Game</a> </p>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
