--- a/doggos.html
+++ b/doggos.html
@@ -27,6 +27,7 @@
   <p>Visit my <a href="forms.html">Form</a> </p>
   <p>Visit my <a href="doggos.html">Doggos</a> </p>
   <p>Visit my <a href="navButtons.html">Buttons</a> </p>
+  <p>Visit my <a href="my-mole-game/my-mole.html">Mole Game</a> </p>
   <script src="js/doggos.js"></script>
 </body>
 
