--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p>Visit my <a href="forms.html">Form</a> </p>
   <p>Visit my <a href="doggos.html">Doggos</a> </p>
   <p>Visit my <a href="navButtons.html">Buttons</a> </p>
+  <p>Visit my <a href="my-mole-game/my-mole.html">Mole Game</a> </p>
   <hr>
   <h2>My Fine Hobbies</h2>
   <img src="images/blog1.jpg" alt="Weird alien eating popcorn." title="Wow Alien.">
