--- a/learning.html
+++ b/learning.html
@@ -96,6 +96,7 @@
     <p>Visit my <a href="forms.html">Form</a> </p>
     <p>Visit my <a href="doggos.html">Doggos</a> </p>
     <p>Visit my <a href="navButtons.html">Buttons</a> </p>
+    <p>Visit my <a href="my-mole-game/my-mole.html">Mole Game</a> </p>
     <hr>
     <style>
         .borderradius2 {
